# iTask

./: .gitignore  README.md  TDD_SUMMARY.md  example_task.sh  itask  itask_cli.py  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
completions/: _itask
lib/: __init__.py  config.py  launchd.py  parser.py  plist_generator.py
tests/: __init__.py  test_cli.py  test_config.py  test_launchd.py  test_parser.py  test_plist_generator.py
